# mlops_zoomcamp_sam

./: .gitignore  README.md  deployment.yaml  mlflow.db  prefect.yaml
01-intro/: homework_notebook.ipynb
02-mlflow/: mlflow.db  model_registry.ipynb  week1_hw_notebook.ipynb
02-mlflow/examples/: backend.db  mlflow.db  scenario-1.ipynb  scenario-2.ipynb  scenario-3.ipynb
02-mlflow/mlruns/: mlflow.db
02-mlflow/weight_and_biases/: requirements.txt
03-orchestration/: pyproject.toml  requirements.txt
03-orchestration/3.3/: orchestrate_pre_prefect.py
03-orchestration/3.4/: orchestrate.py
03-orchestration/3.5/: orchestrate.py  orchestrate_s3 2.py  orchestrate_s3.py
04-deployment/: section1_rebuild.ipynb
04-deployment/46deployment/: Pipfile  prefect.yaml  requirements.txt  score.py  score_backfill.py  score_backfill_nodeploycode.py
04-deployment/batch/: README.md  score.ipynb  score.py
04-deployment/homework/: Dockerfile  Pipfile  README.md  starter.ipynb  starter.py
04-deployment/streaming/: README.md
04-deployment/web_service/: Dockerfile  Pipfile  README.md  practice.ipynb  predict.py  predict_4.3.py  pyproject.toml  random-forest.ipynb
04-deployment/web_service_ec2_mlflow/: Pipfile  test.py  (+2 more)
05-monitoring/: Pipfile  baseline_model_nyc_taxi_data.ipynb  docker-compose.yml  dummy_metrics_calculation.py  evidently_metrics_calculation.py
06-best_practices/: Pipfile  README.md
07-project/: .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  Pipfile  README.md  app.py  columns.json  docker-compose.yaml  eval.py  model.py  run.sh  setup.py  start.sh
(+95 files in other folders)
