[tool.poetry]
name = "web-service"
version = "0.1.0"
description = ""
authors = ["Sam L <lafell.samuel@gmail.com>"]
readme = "README.md"
packages = [{include = "web_service"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.2.2"
pandas = "^2.0.2"
flask = "*"
typing-extensions = "^4.6.3"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
